# data_portal

./: .gitignore  README.md  docker-compose.yaml
frontend/: README.md  package-lock.json  package.json
frontend/.storybook/: main.ts  preview.ts
frontend/project.inlang/: project_id
frontend/src/: app.css  app.html
frontend/src/lib/: types.ts
frontend/src/lib/components/: connexion_form.svelte  node_details.svelte  node_form.svelte  node_info.svelte  topbar.svelte  tree_edit.svelte  treeview.svelte
frontend/src/lib/components/ui/: tabs.svelte
frontend/src/lib/mocks/: dev_tree.json  openims_raw.json
frontend/src/lib/server/: dev.json
frontend/src/lib/server/crud/: nodes.ts
frontend/src/lib/server/db/: schema.ts
frontend/src/lib/server/service/: dev.ts  nodes.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/stories/: topbar.stories.svelte  treeview.stories.svelte
openims/: .gitignore  pyproject.toml
openims/app/: app.py  crud.py  database.py  models.py  schemas.py
openims/app/core/: config.py
openims/app/routers/: timeseries.py
