[project]
name = "openims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastapi-offline>=1.7.3",
    "loguru>=0.7.3",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
